<resources>
    <string name="app_name">CryptoWatcher</string>
    <string name="section_main">Home</string>
    <string name="section_settings">Settings</string>
    <string name="header_btc">BTC</string>
    <string name="header_eth">ETH</string>
    <string name="header_bch">BCH</string>
    <string name="header_ltc">LTC</string>
    <string name="can_buy_text">You can buy at</string>
    <string name="can_sell_text">You can sell at</string>
    <string name="base_url">https://api.coinbase.com/</string>
    <string name="value_currency">%1$s %2$s</string>

    <!--Network Error-->
    <string name="network_error_code_general">Api General Error</string>
    <string name="network_error_no_internet_connection">There is no internet connection</string>

    <!--Pairs-->
    <string name="pair_btc_usd">BTC-USD</string>
    <string name="pair_btc_gbp">BTC-GBP</string>
    <string name="pair_btc_eur">BTC-EUR</string>
    <string name="pair_eth_usd">ETH-USD</string>
    <string name="pair_eth_gbp">ETH-GBP</string>
    <string name="pair_eth_eur">ETH-EUR</string>
    <string name="pair_bch_usd">BCH-USD</string>
    <string name="pair_bch_gbp">BCH-GBP</string>
    <string name="pair_bch_eur">BCH-EUR</string>
    <string name="pair_ltc_usd">LTC-USD</string>
    <string name="pair_ltc_gbp">LTC-GBP</string>
    <string name="pair_ltc_eur">LTC-EUR</string>
    <string name="error_ocurred">An error occurred.</string>
    <string name="default_value">3000.25</string>
    <string name="notify_drops">Notify me when value drops this value</string>
    <string name="notify_drops_btc">Notify me when BTC is below this value</string>
    <string name="notify_high_btc">Notify me when BTC is above this value</string>
    <string name="notify_drops_eth">Notify me when ETH is below this value</string>
    <string name="notify_high_eth">Notify me when ETH is below this value</string>
    <string name="notify_drops_bch">Notify me when BCH is below this value</string>
    <string name="notify_high_bch">Notify me when BCH is below this value</string>
    <string name="notify_drops_ltc">Notify me when LTC is below this value</string>
    <string name="notify_high_ltc">Notify me when LTC is below this value</string>

    <string name="settings_radio_compra">Compra</string>
    <string name="settings_radio_venta">Venta</string>
    <string name="notify_raise">Notify me when value raises this value</string>
    <string name="section_alarm">Alarm Detail</string>
</resources>
