<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="eventHandler"
            type="com.napsis.cryptowatcher.utils.EventHandlerNavigation" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_medium_size"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TitleCrypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_btc" />

            <LinearLayout
                style="@style/SettingsLinearBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btcLayoutUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> eventHandler.onClick()}"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_medium_size"
                            android:text="@string/notify_drops_btc"
                            android:textSize="@dimen/default_text_medium_size" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TitleCrypto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="2000 EUR for sale" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/btcUpSwitchDrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btcLayoutDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_medium_size"
                            android:text="@string/notify_high_btc"
                            android:textSize="@dimen/default_text_medium_size" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TitleCrypto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="2000 EUR for puschase" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/btcDownSwitchDrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>


            <android.support.v7.widget.AppCompatTextView
                style="@style/TitleCrypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_eth" />

            <LinearLayout
                style="@style/SettingsLinearBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ethLayoutUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> eventHandler.onClick()}"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_medium_size"
                            android:text="@string/notify_drops_eth"
                            android:textSize="@dimen/default_text_medium_size" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TitleCrypto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="2000 EUR for sale" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/ethUpSwitchDrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ethLayoutDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> eventHandler.onClick()}"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_medium_size"
                            android:text="@string/notify_high_eth"
                            android:textSize="@dimen/default_text_medium_size" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TitleCrypto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="2000 EUR for sale" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/ethDownSwitchDrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>


            <android.support.v7.widget.AppCompatTextView
                style="@style/TitleCrypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_bch" />

            <LinearLayout
                style="@style/SettingsLinearBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/bchLayoutUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> eventHandler.onClick()}"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_medium_size"
                            android:text="@string/notify_drops_bch"
                            android:textSize="@dimen/default_text_medium_size" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TitleCrypto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="2000 EUR for sale" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/bchUpSwitchDrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bchLayoutDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> eventHandler.onClick()}"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_medium_size"
                            android:text="@string/notify_high_bch"
                            android:textSize="@dimen/default_text_medium_size" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TitleCrypto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="2000 EUR for sale" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/bchDownSwitchDrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                style="@style/TitleCrypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_eth" />

            <LinearLayout
                style="@style/SettingsLinearBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ltcLayoutUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> eventHandler.onClick()}"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_medium_size"
                            android:text="@string/notify_drops_ltc"
                            android:textSize="@dimen/default_text_medium_size" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TitleCrypto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="2000 EUR for sale" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/ltcUpSwitchDrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ltcLayoutDown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> eventHandler.onClick()}"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/default_medium_size"
                            android:text="@string/notify_high_ltc"
                            android:textSize="@dimen/default_text_medium_size" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/TitleCrypto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="2000 EUR for sale" />
                    </LinearLayout>

                    <Switch
                        android:id="@+id/ltcDownSwitchDrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</layout>